--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eventjs",
+  "name": "bozoevent",
   "version": "1.0.0",
   "description": "simple event system written in javascript",
   "main": "./dist/main.js",
