--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bozoevent",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "simple event system written in javascript",
-  "main": "./dist/main.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js"
